birthday video and instagram widget

--- a/index.html
+++ b/index.html
@@ -35,3 +35,11 @@ home: true
         </a>
     </p> -->
 </div>
+
+
+<center>
+  <h3>Instagram</h3>
+  <!-- SnapWidget -->
+  <script src="https://snapwidget.com/js/snapwidget.js"></script>
+  <iframe src="https://snapwidget.com/embed/262815" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+</center>
