--- a/archive.html
+++ b/archive.html
@@ -2,6 +2,8 @@
 layout: page
 title: Archive
 permalink: /archive/
+backgrounds:
+    - /img/fondos/IMG_2509.JPG
 ---
 
 {% for post in site.posts %}
