--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@ home: true
     </p> -->
 </div>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- first family ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7902219614622730"
+     data-ad-slot="1081975204"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <h2>Follow me on <a href="https://www.instagram.com/coloma.farre/" target="_blank">Instagram <i class="fa fa-instagram"></i></a></h2>
 <center>
   <div style="position: relative; height: 0; width: 100%; overflow: hidden; padding-top:100%;"><iframe src="//widgets-code.websta.me/wp/c15f40d6025d?ck=MjAxNi0xMC0xOVQyMDozNjowNS4wMDBa" class="websta-widgets" allowtransparency="true" frameborder="0" scrolling="no" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe> <!-- WEBSTA WIDGETS - widgets.websta.me --></div>
